--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "shortid": "^2.2.4",
     "st": "~1.1.0",
     "steed": "^1.0.0",
+    "async": "1.5.2",
     "uuid": "^2.0.1",
     "websocket-stream": "~3.1.0"
   },
